fixed the alignment of text on lis

--- a/app/assets/stylesheets/stylezzz.css.scss
+++ b/app/assets/stylesheets/stylezzz.css.scss
@@ -53,6 +53,10 @@ a {
   overflow-y:auto;
   height: 500px;
   width: 100%;
+  a {
+    float: none;
+    display: block;
+  }
 }
 
 
